# multimodal-retrieval-agent

./: .gitignore  README.md  pyproject.toml  requirements-models.txt
configs/: model_config.yaml  paths.example.yaml
data/: README.md
data/metadata/: gpt_intent.json  image_dataset.json  qwen_labels.json  qwen_lora_labels.json
docs/: EXPERIMENT_SUMMARY.md
notebooks/: 01_taiyi_clip_threshold.ipynb  02_qwen_labels_f1.ipynb  03_intent_recognition.ipynb  04_qwen_vl_lora_train.ipynb
scripts/: run_demo.py  train_qwen_lora.py
src/multimodal_retrieval_agent/: __init__.py  cli.py
src/multimodal_retrieval_agent/evaluation/: intent_eval.py  metrics.py
src/multimodal_retrieval_agent/intent/: __init__.py  rule_based.py  schema.py
src/multimodal_retrieval_agent/retrieval/: clip_retriever.py
src/multimodal_retrieval_agent/utils/: io.py
tests/: test_intent.py
